# miden-wallet-server

./: .env.example  .gitignore  Cargo.toml  Makefile  Readme.md  TODO
deployments/: mint-server.service  nginx.conf  server.service  signaling.service  tx_worker.service
signaling-server/: package.json  pnpm-lock.yaml
signaling-server/src/: index.ts
src/: faucet.rs  lib.rs  main.rs  note_screener.rs  reset_metrics.rs  server.rs  tx_worker.rs  utils.rs
