[package]
name = "miden-faucet-server"
version = "0.1.0"
edition = "2024"
default-run = "miden-faucet-server"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "ws"] }
rand_core = "0.9.3"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
dotenvy = "0.15"
rusqlite = "0.36.0"
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
latest = "0.1.1"
rand = "0.9.2"
bech32 = "0.11.0"
futures = "0.3.31"
miden-client = { version = "0.11.2", features = ["sqlite", "tonic"] }
miden-objects = "0.11.1"
