[package]
name = "miden-faucet-server"
version = "0.1.0"
edition = "2024"
default-run = "miden-faucet-server"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "ws"] }
rand_core = "0.9.3"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
rusqlite = "0.36.0"
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
rand = "0.9.2"
bech32 = "0.11.0"
threadpool = "1.8.1"
miden-objects = "0.12.3"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
miden-client-sqlite-store = "0.12.0"
miden-client = { version = "0.12.3", features = ["tonic"] }
